# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2016-07-03 ede
  * GeoJSON reader supports native json data types now

2016-07-01 ede
  * GeoJSON read support added, sponsored by Jukka Rahkonen

2016-06-23 mmichaud <m.michael.michaud@orange.fr>
  * Fix bug #420 (many feature labels were lost with svg export)

2016-06-12 mmichaud <m.michael.michaud@orange.fr>
  * Update TopologyExtension to 0.9.0.

2016-06-17 mmichaud <m.michael.michaud@orange.fr>
  * Fix a problem with z interpolation in Noder plugin (note : there is still
    a bug related to JTS when using a PrecisionModel of 0 decimal - scale=1)

2016-06-12 mmichaud <m.michael.michaud@orange.fr>
  * Update TopologyExtension to 0.8.2.

2016-06-04 Giuseppe Aruta  <giuseppe_aruta@yahoo.it>
  * Add zoom shortcuts to status bar.
    a) Double clicking on scale section opens Zoom to scale plugin
    b) Double clicking on coordinate section opens Zoom to coordinates plugin

2016-06-01 mmichaud <m.michael.michaud@orange.fr>
  * Remove the 1.124 factor to compute -Xmx as the memory used by the os/jvm may
    vary from one version to another and using that much memory may crash the jvm.

2016-05-29 ede
  * Add a new PlugInClassLoader to keep all classes in one to circumvent issues
    resulting in non working instanceof's or missing classes

2016-05-24 mmichaud <m.michael.michaud@orange.fr>
  * Postgis writer : deprecate vacuum analyze as it may takes too much time,
    must be driven by the server, not the client

2016-05-21 mmichaud <m.michael.michaud@orange.fr>
  * Fix bugs in WritableDataStoreDataSource

2016-05-20 Giuseppe Aruta  <giuseppe_aruta@yahoo.it>
  * Add an improved version of Layer Properties plugin

2016-05-20 mmichaud <m.michael.michaud@orange.fr>
  * Rename LineSimplifyJTS15AlgorithmPlugIn to SimplifyWithJTSAlgorithm